OrderSystem/k8s/ordersystem_depl.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ordersystem-deployment
  namespace: sm

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordersystem
  template:
    metadata:
      labels:
        app: ordersystem
    spec:
      containers:
        - name: ordersystem
        # AWS의 ECR를 사용 
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/sangmin-ordersystem:latest
          ports: 
            - containerPort: 8080
          resources:
            limits: # 최대 할당량
              cpu: "0.5"
              memory: "500Mi"
            requests: # 최소 할당량
              cpu: "0.5"
              memory: "500Mi"
