OrderSystem/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: sm
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - server.devhot.kr
    secretName: server.devhot.kr-tls  
  rules:
    - host: server.devhot.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ordersystem-service
                port:
                  number: 80
